Fix hardcoded CORS origin and refine Dockerfile JAR selection